--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
+    "flowbite": "^2.1.1",
+    "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.6",
     "react-dom": "^18.2.0",
