--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.1",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.6",
     "react-dom": "^18.2.0",
